# super-tabs

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
.cargo/: config.toml
.github/workflows/: build.yml  lint.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: layout.rs  lib.rs  protocol.rs  schema.rs  style.rs  tab_name.rs
examples/: debug-repro.kdl  super-tabs-left.kdl  super-tabs-right.kdl  tmux-colored.kdl  tmux-style.kdl  vertical-tabs-left.kdl  vertical-tabs-right.kdl
layouts/: tmux-colored.kdl  tmux-style.kdl
src/: main.rs
