[package]
name = "zellij-vertical-tabs"
version = "0.1.0"
edition = "2021"
description = "A vertical tab bar plugin for zellij"
license = "MIT"

[dependencies]
# Using git dependency for zellij-tile to get unbold_all() method
# which is only available in main branch (not yet released to crates.io)
# This allows us to render non-bold text for a cleaner tmux-like appearance
zellij-tile = { git = "https://github.com/zellij-org/zellij", branch = "main" }
unicode-width = "0.2"
