[workspace]
members = [".", "cli", "core"]
resolver = "2"

[package]
name = "super-tabs"
version = "0.1.0"
edition = "2024"
description = "A schema-driven vertical tab plugin for Zellij"
license = "MIT"

[dependencies]
super-tabs-core = { path = "core" }
zellij-tile = { git = "https://github.com/zellij-org/zellij", branch = "main" }
